--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,15 @@
   <groupId>com.in28minutes.java.interview</groupId>
   <artifactId>JavaInterviewGuide</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 	<build>
 		<finalName>in28minutes</finalName>
 		<pluginManagement>
